Fixes shadows appearing inside forms on iOS.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -348,6 +348,7 @@ textarea,
 	transition: border .2s;
 	background-color: @color-swatch1;
 	border-radius: 2px;
+	-webkit-appearance: none;
 	&:hover, &:focus {
 		border: 1px solid darken(@borders-blocks, 20%);
 		background-color: @color-swatch1;
